Revert "Update Exemplar_Based_3D_Portrait_Stylization_Video.mp4"
This reverts commit bc03b46be010743e65d8996d73e177844bcdbcc8.

--- a/projs/3DPS/index.html
+++ b/projs/3DPS/index.html
@@ -29,9 +29,9 @@
 				<table border="0" align="center">
 	        <tr>
 	            <td align="center">
-					<a class="bar" href="data/Exemplar_Based_3D_Portrait_Stylization_Arxiv_Paper.pdf"><b>Paper</b></a> |&emsp;
-	                <a class="bar" href="data/Exemplar_Based_3D_Portrait_Stylization_Arxiv_Supp.pdf"><b>Supplementary</b></a> |
-					<a class="bar" href="https://github.com/halfjoe/3D-Portrait-Stylization"><b>Code</b></a>
+					&emsp; <a class="bar" href="data/Exemplar_Based_3D_Portrait_Stylization_Arxiv_Paper.pdf"><b>Paper</b></a> |&emsp;
+	                <a class="bar" href="data/Exemplar_Based_3D_Portrait_Stylization_Arxiv_Supp.pdf"><b>Supplementary</b></a> |&emsp;
+					<a class="bar" href="https://github.com/halfjoe/3D-Portrait-Stylization"><b>Code</b></a> &emsp;
 	            </td>
 	        </tr>
 	    	</table>
@@ -115,11 +115,11 @@
 				<h2>Citation</h2>
 				<div class="section bibtex">
 					<pre>@ARTICLE{han2021exemplarbased,
-	author={Han, Fangzhou and Ye, Shuquan and He, Mingming and Chai, Menglei and Liao, Jing},
-	journal={IEEE Transactions on Visualization and Computer Graphics},
-	title={Exemplar-Based 3D Portrait Stylization},
-	year={2021},
-	doi={10.1109/TVCG.2021.3114308}}
+author={Han, Fangzhou and Ye, Shuquan and He, Mingming and Chai, Menglei and Liao, Jing},
+journal={IEEE Transactions on Visualization and Computer Graphics},
+title={Exemplar-Based 3D Portrait Stylization},
+year={2021},
+doi={10.1109/TVCG.2021.3114308}}
 }
 					</pre>
 				</div>
